# text2midi

./: .gitignore  LICENSE  README.md  pyproject.toml  text2midi.py
