[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "text2midi"
author = "Nishkrit Desai"
author-email = "nishkritdesai10@gmail.com"
home-page = "https://github.com/nshdesai/text2midi"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

